made uploaded images fit in restaurant application, made input fields required in restaurant application, and fixed overflow in myRestaurants page

--- a/application/public/stylesheets/restaurant-pages-css/restaurantApplication.css
+++ b/application/public/stylesheets/restaurant-pages-css/restaurantApplication.css
@@ -111,7 +111,7 @@ label{
 }
 
 .menu-item-description{
-    width: 300px;
+    width: 260px;
     height: 90px;
 }
 
